# genjax-examples

./: .gitignore  README.md  mypy.ini  pyproject.toml
docs/: genjax.md
notebooks/: demo_plotting.ipynb
src/eevi/: __init__.py  estimator.py
src/utils/: plot.py  tree.py
tests/: test_binary_tree.py  test_bn_entropy.py  test_changepoint_model.py  test_crosscat.py  test_dirichlet_process.py  test_genjax.py  test_gp_extrapolation.py  test_marginals.py  test_mcmc.py  test_mvn_entropy.py
