[project]
authors = [
  {name = "gszep", email = "grisha.szep@gmail.com"},
]
dependencies = [
    "genjax (>=0.10.3,<0.11.0)",
    "jax[cuda12] (>=0.5.3,<0.6.0); sys_platform != 'darwin'",
    "jax (>=0.5.3,<0.6.0); sys_platform == 'darwin'",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]
description = ""
name = "genjax-examples"
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "0.1.0"

[tool.poetry]
packages = [{include = "genjax_examples", from = "src"}]

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.250308"
pytest = "^8.3.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
explicit_package_bases = true
files = ["."]
follow_imports = "normal"
ignore_errors = true
ignore_missing_imports = true
local_partial_types = true
namespace_packages = true
python_version = "3.11"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
