[project]
authors = [
  {name = "gszep", email = "grisha.szep@gmail.com"},
]
dependencies = [
  "genjax (>=0.10.3,<0.11.0)",
  "jax[cuda12] (>=0.5.3,<0.6.0); sys_platform != 'darwin'",
  "jax (>=0.5.3,<0.6.0); sys_platform == 'darwin'",
  "matplotlib (>=3.10.1,<4.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "seaborn (>=0.13.2,<0.14.0)",
  "pytest>=8.4.1",
]
description = ""
name = "genjax-examples"
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "0.1.0"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore:.*U.*mode is deprecated:DeprecationWarning",
]
